--- a/aeffect/templates/login.html
+++ b/aeffect/templates/login.html
@@ -126,15 +126,11 @@
     <div class="twelve columns">
       <hr />
       <div class="row">
-        <div class="four columns">
-          &nbsp; &copy; Copyright no one at all. Go to town.
+        <div class="six columns">
+          <p>&copy; 2012 Alaska carbon exchange</p>
         </div>
-        <div class="four columns">
-          <ul class="link-list left">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
+        <div class="six columns right">
+            Developed by: Code Foremen
         </div>
       </div>
     </div>
