--- a/aeffect/templates/purchase.html
+++ b/aeffect/templates/purchase.html
@@ -155,15 +155,10 @@
       <hr />
       <div class="row">
         <div class="six columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
+          <p>&copy; 2012 Alaska carbon exchange</p>
         </div>
-        <div class="six columns">
-          <ul class="link-list right">
-            <li><a href="#">Section 1</a></li>
-            <li><a href="#">Section 2</a></li>
-            <li><a href="#">Section 3</a></li>
-            <li><a href="#">Section 4</a></li>
-          </ul>
+        <div class="six columns right">
+            Developed by: Code Foremen
         </div>
       </div>
     </div>
