--- a/aeffect/templates/region.html
+++ b/aeffect/templates/region.html
@@ -129,15 +129,10 @@
       <hr />
       <div class="row">
         <div class="six columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
+          <p>&copy; 2012 Alaska carbon exchange</p>
         </div>
-        <div class="six columns">
-          <ul class="link-list right">
-            <li><a href="#">Section 1</a></li>
-            <li><a href="#">Section 2</a></li>
-            <li><a href="#">Section 3</a></li>
-            <li><a href="#">Section 4</a></li>
-          </ul>
+        <div class="six columns right">
+            Developed by: Code Foremen
         </div>
       </div>
     </div>
@@ -294,16 +289,28 @@
                             color = "#303030";
                         };
 
+                        if(obj.purchase._id){
+                            console.log('buff');
+                            color = "#FFFFFF";
+                        };
+
+                        strokecolor = color;
+
+                        if(obj.value.normal.available != obj.value.normal.total){
+                            strokecolor = "#505050";
+                        };
+                        
+
                         var lotPolygon = new google.maps.Polygon({
                             paths: paths,
-                            strokeColor: color,
+                            strokeColor: strokecolor,
                             strokeOpacity: 1,
                             strokeWeight: 2,
                             strokePosition: google.maps.StrokePosition.OUTSIDE,
                             fillColor: color,
-                            fillOpacity: 0.1,
+                            fillOpacity: (obj.value.normal.available / obj.value.normal.total)/2.0,
                             that: that,
-                            zIndex: 3,
+                            zIndex: 99999 - (obj.value.normal.available / obj.value.normal.total),
                             title: obj.hash,
                         });
     
@@ -312,12 +319,12 @@
                         });
     
                         google.maps.event.addListener(lotPolygon, 'mouseover', function() {
-                            this.setOptions({'fillOpacity': .5});
+                            //this.setOptions({'fillOpacity': .5});
                             this.setOptions({'strokeWeight': 4});
                             jQuery("#region").html(this.that.region['name'] + " <b>(Click the region for more information)</b>");
                         });
                         google.maps.event.addListener(lotPolygon, 'mouseout', function() {
-                            this.setOptions({'fillOpacity': 0.1});
+                            //this.setOptions({'fillOpacity': 0.1});
                             this.setOptions({'strokeWeight': 2});
                             jQuery("#region").text("{{ region['name'] }}");
                         });
