--- a/aeffect/templates/region.html
+++ b/aeffect/templates/region.html
@@ -1,433 +1,55 @@
-<!DOCTYPE html>
+{% extends "basemap.html" %}
 
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8" />
+{% block title %}Alaska Carbon Exchange :: Region :: {{ region['name'] }}{% end %}
 
-  <!-- Set the viewport width to device width for mobile -->
-  <meta name="viewport" content="width=device-width" />
-
-  <title>Alaska Carbon Exchange :: Region :: {{ region['name'] }}</title>
-
-  <!-- Included CSS Files (Uncompressed) -->
-  <!--
-  <link rel="stylesheet" href="/stylesheets/foundation.css">
-  -->
-  
-  <!-- Included CSS Files (Compressed) -->
-  <link rel="stylesheet" href="/stylesheets/app.css">
-
-  <script src="/javascripts/foundation/modernizr.foundation.js"></script>
-</head>
-<body>
-
-  <!-- Header and Nav -->
-
-  <nav class="top-bar">
-    <ul>
-      <!-- Title Area -->
-      <li class="name">
-        <h1>
-          <a href="/">
-            <span id="ihateyou">Alaska Carbon Exchange</span>
-          </a>
-        </h1>
-      </li>
-      <li class="toggle-topbar"><a href="#"></a></li>
-    </ul>
-
-    <section>
-      <!-- Left Nav Section -->
-      <ul class="left">
-        <li class="divider"></li>
-        <li class="has-dropdown">
-          <a class="active" href="#">Regions</a>
-          <ul class="dropdown">
-            {% if all_regions %}
-                {% for section, regions in all_regions.iteritems() %}
-                <li><label>{{ section }}</label></li>
-                    {% for _region in regions %}
-                        <li><a href="#" class="">Dropdown Level 1</a></li>
-                    {% end %}
-                <li class="divider"></li>
-                {% end %}
-            {% else %}
-            <li><a href="#">No Regions</a></li>
-            {% end %}
-          </ul>
-        </li>
-        <li class="divider"></li>
-        <li><a href="#">Visible Regions</a></li>
-        <li class="divider"></li>
-      </ul>
-
-      <!-- Right Nav Section -->
-      <ul class="right">
-        <li class="divider"></li>
-          <li class="search">
-              <form action="asdf">
-                <input type="search" placeholder="Search...">
-              </form>
-          </li>
-        <li class="divider"></li>
-        <li>
-          {% if handler.session.get('user') %}
-          <a href="{{ handler.reverse_url('logout') }}">Log Out</a>
-          {% else %}
-          <a href="{{ handler.reverse_url('login') }}">Log In</a>
-          {% end %}
-        </li>
-      </ul>
-    </section>
-  </nav>
-
-
-  <!-- End Header and Nav -->
-
-  <div id="map_canvas" style="height: 400px;"></div>
-
+{% block breadcrumbs %}
   <ul class="breadcrumbs">
       <li><a href="#">Home</a></li>
       <li><a href="#">Regions</a></li>
       <li><a href="#" id="state">{{ state }}</a></li>
-      {% if region['name'] %}
-          <li class="current" id="region-li"><a href="#" id="region">{{ region['name'] }}</a></li>
-      {% else %}
-          <li class="unavailable" id="region-li"><a href="#" id="region">Please select a region by clicking on it on the map or from the upper menu</a></li>
-      {% end %}
+      <li class="current" id="region-li"><a href="#" id="region">{{ region['name'] }}</a></li>
   </ul>
+{% end %}
 
-<div class="eleven centered columns">
-
-  <!-- Main Grid Section -->
-
+{% block precontent %}
   <div class="panel">
     <h3>Be an eco hero!</h3>
     <h5 class="subheader">There's a great way to protect the environment right after the button below!</h5>
     <a class="button" href="/purchase">Protect the environment by holding land &raquo;</a>
   </div>
+{% end %}
 
-  <div class="row">
+{% block region_poly_options %}
+                            if(obj.slug == "{{ region['slug'] }}"){
+                                stroke_color = "#990000";
+                                region_zindex = 5;
+                            };
+{% end %}
 
-    <div class="eleven columns centered" role="content">
-        <div class="row">
-            {% raw content_html %}
-        </div>
-    </div>
-  </div>
-</div>
-  <!-- End Grid Section -->
-
-  <!-- Footer -->
-
-  <footer class="row">
-    <div class="twelve columns">
-      <hr />
-      <div class="row">
-        <div class="six columns">
-          <p>&copy; 2012 Alaska carbon exchange</p>
-        </div>
-        <div class="six columns right">
-            Developed by: Code Foremen
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <!-- Included JS Files (Uncompressed) -->
-
-  <script src="/javascripts/foundation/jquery.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.mediaQueryToggle.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.forms.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.reveal.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.orbit.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.navigation.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.buttons.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.tabs.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.tooltips.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.accordion.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.placeholder.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.alerts.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.topbar.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.joyride.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.clearing.js"></script>
-  
-  <script src="/javascripts/foundation/jquery.foundation.magellan.js"></script>
-  
-  
-  <!-- Included JS Files (Compressed) -->
-
-  <!--
-  
-  <script src="/javascripts/foundation/jquery.js"></script>
-  <script src="/javascripts/foundation/foundation.min.js"></script>
-
-  -->
-  
-  <!-- Initialize JS Plugins -->
-  <script src="/javascripts/foundation/app.js"></script>
-
-  <!-- <script src="/javascripts/gmap3.js"></script> -->
-
-  <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> -->
-
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=visualization"></script>
-
-  <script src="/javascripts/jquery.ui.map.js"></script>
-  <script src="/javascripts/jquery.mustache.js"></script>
-
-  <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
-
-  <script type="text/javascript">
-
-    Stripe.setPublishableKey('pk_test_wA2dmuQm8cOPsfdUOGfOLrbf');
-
-    function stripeResponseHandler(status, response) {
-                if (response.error) {
-                    jQuery("#card-number-error").hide();
-                    // re-enable the submit button
-                    jQuery('.submit-button').removeAttr("disabled");
-                    // show the errors on the form
-                    console.log(response.error)
-                    jQuery("#card-number-error").html(response.error.message);
-                    jQuery("#card-number-error").show();
-                } else {
-                    var form$ = jQuery("#payment-form");
-                    // token contains id, last4, and card type
-                    var token = response['id'];
-                    // insert the token into the form so it gets submitted to the server
-                    form$.append("<input type='hidden' name='stripeToken' value='" + token + "' />");
-                    // and submit
-                    form$.get(0).submit();
-                }
-            }
-
-    var Rects = [];
-    var region_slug = "{{ region['slug'] }}";
-    var region_name = "{{ region['name'] }}";
-
-    function myFunction(data) {
-        console.log('starting');
-
-        var themap = jQuery('#map_canvas').gmap('get', 'map');
-        
-        if (data) {
-
-            if (Rects) {
-                for (i in Rects) {
-                    Rects[i].setMap(null);
-                }
-            }
-            Rects.length = 0;
-
-            jQuery.each(data,function(idx, obj){
-
-                var themap = jQuery('#map_canvas').gmap('get', 'map');
-
-                //console.log(obj)
-                //var swLatLng = new google.maps.LatLng(obj.bbox.s, obj.bbox.w);
-                //var neLatLng = new google.maps.LatLng(obj.bbox.n, obj.bbox.e);
-                //var rectBounds = new google.maps.LatLngBounds(swLatLng, neLatLng);
-                //var ghRectangle = new google.maps.Rectangle({
-                //    bounds: rectBounds,
-                //    title:"Hello World!",
-                //    //map: themap,
-                //    strokeColor: "#000000",
-                //    strokeOpacity: 1,
-                //    strokeWeight: 2,
-                //    fillOpacity: 0,
-                //});
-
-                //Rects.push(ghRectangle);                
-
-                var that = this;
-                //console.log(idx)
-                //console.log(obj)
-    
-                
-                if(obj.arg == true){
-                    console.log('argh');
-                    var marker = new google.maps.Marker({
-                        position: new google.maps.LatLng(obj.lat, obj.long),
-                        map: themap,
-                        title: obj.hash
-                    });
-                    Rects.push(marker);
-                };
-                
-                if(obj.lot == true){
-
-                  jQuery.each(obj.geom.outline.coordinates, function(idx, objx){
-                        var paths = [];
-                        jQuery.each(objx, function(idxxx, objxx){
-                            paths.push(new google.maps.LatLng(objxx[1], objxx[0]));
-                        });                    
-    
-
-                        var color = "#A0A0A0";
-
-                        if(obj.flags.buffer){
-                            console.log('buff');
-                            color = "#303030";
-                        };
-
-                        if(obj.purchase._id){
-                            console.log('buff');
-                            color = "#FFFFFF";
-                        };
-
-                        strokecolor = color;
-
-                        if(obj.value.normal.available != obj.value.normal.total){
-                            strokecolor = "#505050";
-                        };
-                        
-
-                        var lotPolygon = new google.maps.Polygon({
-                            paths: paths,
-                            strokeColor: strokecolor,
-                            strokeOpacity: 1,
-                            strokeWeight: 2,
-                            strokePosition: google.maps.StrokePosition.OUTSIDE,
-                            fillColor: color,
-                            fillOpacity: (obj.value.normal.available / obj.value.normal.total)/2.0,
-                            that: that,
-                            zIndex: 99999 - (obj.value.normal.available / obj.value.normal.total),
-                            title: obj.hash,
-                        });
-    
-                        google.maps.event.addListener(lotPolygon, 'click', function(shape) {
-                            window.location.href = "/region/" + this.that.region.slug;
-                        });
-    
-                        google.maps.event.addListener(lotPolygon, 'mouseover', function() {
-                            //this.setOptions({'fillOpacity': .5});
-                            this.setOptions({'strokeWeight': 4});
-                            jQuery("#region").html(this.that.region['name'] + " <b>(Click the region for more information)</b>");
-                        });
-                        google.maps.event.addListener(lotPolygon, 'mouseout', function() {
-                            //this.setOptions({'fillOpacity': 0.1});
-                            this.setOptions({'strokeWeight': 2});
-                            jQuery("#region").text("{{ region['name'] }}");
-                        });
-    
-                        lotPolygon.setMap(themap);
-                        //console.log('drawn')
-                        Rects.push(lotPolygon);
-                  });
-                };
-
-                if(obj.region == true){
-                  jQuery.each(obj.geom.outline.coordinates, function(idx, objx){
-                        var paths = [];
-                        jQuery.each(objx, function(idxxx, objxx){
-                            paths.push(new google.maps.LatLng(objxx[1], objxx[0]));
-                        });                    
-
-                        var color = "#C0C0C0";
-
-                        if(obj.slug == "{{ region['slug'] }}"){
-                            color = "#C00000";
-                        };
-
-    
-                        var lotPolygon = new google.maps.Polygon({
-                            paths: paths,
-                            strokeColor: color,
-                            strokeOpacity: 0.25,
-                            strokeWeight: 10,
-                            strokePosition: google.maps.StrokePosition.OUTSIDE,
-                            fillColor: "#C0C0C0",
-                            fillOpacity: 0.25,
-                            that: that,
-                            zIndex: 1,
-                            title: obj.hash,
-                        });
-    
-                        google.maps.event.addListener(lotPolygon, 'click', function(shape) {
+{% block region_click_listener %}
                             window.location.href = "/region/" + this.that.slug;
-                        });
-    
-                        google.maps.event.addListener(lotPolygon, 'mouseover', function() {
-                            this.setOptions({'strokeWeight': 20}); 
+{% end %}
+
+{% block region_mouseover_listener %}
+                            this.setOptions({'strokeWeight': region_stroke_weight_at_zoom(themap.getZoom() + 2)});
                             jQuery("#region").html(this.that.name + " <b>(Click the region for more information)</b>");
-                        });
-                        google.maps.event.addListener(lotPolygon, 'mouseout', function() {
-                            this.setOptions({'strokeWeight': 10});
+                            jQuery("#region-li").toggleClass('unavailable');
+                            jQuery("#region-li").toggleClass('current');
+{% end %}
+
+{% block region_mouseout_listener %}
+                            this.setOptions({'strokeWeight': region_stroke_weight_at_zoom(themap.getZoom())});
                             jQuery("#region").text("{{ region['name'] }}");
-                        });
-    
-                        lotPolygon.setMap(themap);
-                        //console.log('drawn')
-                        Rects.push(lotPolygon);
-                  });
-
-                };
-            });
+                            jQuery("#region-li").toggleClass('unavailable');
+                            jQuery("#region-li").toggleClass('current');
+{% end %}
 
 
-        };
-        console.log('stoping');
-    };
-
-    $.noConflict();
-    
-    // Load Function
-    jQuery(function () {
-
-  jQuery("#payment-form").submit(function(event) {
-    // disable the submit button to prevent repeated clicks
-    jQuery('.submit-button').attr("disabled", "disabled");
-
-    Stripe.createToken({
-        number: jQuery('.card-number').val(),
-        cvc: jQuery('.card-cvc').val(),
-        exp_month: jQuery('.card-expiry-month').val(),
-        exp_year: jQuery('.card-expiry-year').val()
-    }, stripeResponseHandler);
-
-    // prevent the form from submitting with the default action
-    return false;
-  });
-
-        jQuery('#map_canvas').gmap({ 'center': '64.735967,-151.262664', 'zoom': 5, 'minZoom': 5, 'maxZoom': 15}).bind(
-            'init',
-            function (event, map) {
-
+{% block region_map_init_script %}
                 var sw = new google.maps.LatLng({{ envelope[2] }}, {{ envelope[0] }});
                 var ne = new google.maps.LatLng({{ envelope[3] }}, {{ envelope[1] }});
                 var swne = new google.maps.LatLngBounds(sw, ne);
                 console.log(swne);
                 map.fitBounds(swne);
                 map.panToBounds(swne);
-
-                jQuery(map).idle(function () {
-                    jQuery.getJSON('/jsontest', {'zoom': map.getZoom(), 'center': map.getCenter().toUrlValue(), 'bounds': map.getBounds().toUrlValue()}, function(data) { myFunction(data); });
-                });
-            }
-        );
-    });    
-    
-  </script>
-
-
-</body>
-</html>
+{% end %}
